Changed name to Dolly Voice Chat

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Audio Recorder</title>
+        <title>Dolly Voice Chat</title>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
             $(document).ready(function() {
@@ -86,7 +86,7 @@
     </head>
     <body>
         <div id="container">
-            <h1>Audio Recorder</h1>
+            <h1>Dolly Voice Chat</h1>
             <button id="recordButton">Record</button>
             <div id="outputContainer"></div>
         </div>
